<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Whuseats(1.0测试)</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="project_name">图书馆座位哄抢系统</string>
    <string name="en_project_name">NO ZUO NO DIE System</string>
    <string name="copyRight">UI归属利昂软件有限公司版权所有-应该是这样的</string>
    <string name="en_copyRight">Copyright Right © 2012-2013 leosys.com.cn-DecompilationByCrt106</string>
    <string name="login_username">学号</string>
    <string name="btn_login">登 录</string>
    <string name="btn_save">保存</string>
    <string name="btn_register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="server_set">服务器设置</string>
    <string name="submit">提交</string>
    <string name="title">图书馆座位预约系统</string>
    <string name="home">首页</string>
    <string name="quick_preordain">快速选座</string>
    <string name="other_preordain">自选座位</string>
    <string name="my_preordain">我的预约</string>
    <string name="about">公告</string>
    <string name="set">服务器设置</string>
    <string name="more">设置</string>
    <string name="quick_lable">快速预定</string>
    <string name="select_venues">选择场馆：</string>
    <string name="preordain_time">预约时间：</string>
    <string name="set_Select">设置查询条件：</string>
    <string name="select_text">立即查询</string>
    <string name="select_more">查询更多</string>
    <string name="seat_lable">可用座位列表：</string>
    <string name="seat_item_room">自习教室</string>
    <string name="seat_item_num">XXX座位</string>
    <string name="seat_item_context">0</string>
    <string name="defult_message">请选择合适的条件查询！</string>
    <string name="progress_text">正在查询......</string>
    <string name="cancel">取消预约</string>
    <string name="today">今天</string>
    <string name="time">11:20</string>
    <string name="hg">--</string>
    <string name="address">图书馆4层南区研究生自习室南59号</string>
    <string name="loading">数据加载中,请稍候...</string>
    <string name="title_orderdetail">预约详情</string>
    <string name="exit">再按一次返回键退出</string>
    <string name="date_start_prompt">请选择开始时间</string>
    <string name="date_end_prompt">请选择结束时间</string>
    <string name="dialog_title">系统已经为您预约好座位</string>
    <string name="dialog_warrant_lable">凭证号：</string>
    <string name="dialog_warrant_num">0012-5</string>
    <string name="dialog_message">(凭证放在上面了,但是你又不看,我也不看,我只会看ID,这里没写)</string>
    <string name="error_message">由于各种原因，您预约失败了！</string>
    <string name="net_error">网络请求失败</string>
    <string name="data_error">数据请求失败</string>
    <string name="hour_forbid">请先选择 预约时长</string>
    <string name="allowedhours">需要%1$s小时</string>
    <string name="web_lable_text">根据网址访问服务器</string>
    <string name="web_head_text">seat.</string>
    <string name="web_end_text">.edu.cn</string>
    <string name="ip_lable_text">根据IP端口访问服务器</string>
    <string name="ip_maohao_text">：</string>
    <string name="web_index_text">网址访问</string>
    <string name="port_index_text">IP端口访问</string>
    <string name="cancel_sucess">您的预约已经取消</string>
    <string name="host_null">服务器地址错误</string>
    <string name="projectname" />
    <string name="预约座位">预约座位</string>
    <string name="监视座位">监听座位</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="是否开启断线重连">是否开启断线重连</string>
    <string name="监听延迟设置">数值设置</string>
    <string name="座位间隔延时">座位间隔延时</string>
    <string name="开始时间查询延时">查询延时_st</string>
    <string name="结束时间查询延时">查询延时_et</string>
    <string name="预约延时">预约延时</string>
    <string name="过滤间隔延时">过滤间隔延时</string>
    <string name="循环上限">循环上限</string>
    <string name="captcha">验证码</string>
    <string name="if_loginpc">是否强势登录(启用筛选 强烈建议勾选)</string>
    <string name="遍历模式">遍历模式</string>
    <string name="过滤模式">过滤模式</string>
    <string name="isloop">是否循环监听</string>
    <string name="VersionUpdate">检测到新版本！是否更新</string>
    <string name="JoinQQGroup">加个Q群呗</string>
    <string name="BookChoosed">设置的座位:</string>
    <string name="EditBookInfo">修改绑定座位</string>
    <string name="clockintro"><![CDATA[使用说明>>]]></string>
    <string name="StartTime">开始时间</string>
    <string name="EndTime">结束时间</string>
    <string name="SwitchTime">切换时间</string>
    <string name="addroom">添加房间</string>
    <string name="startlisten">开始监听</string>
    <string name="delete">删除</string>
    <string name="loginpass">跳过登录>></string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_password">密码</string>
    <string name="is_auto_login">自动登录</string>

</resources>
