<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_his_cancel"
        android:layout_width="74dp"
        android:layout_height="28dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10.0dip"
        android:background="@drawable/red_btn_selector"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/his_infoArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btn_his_cancel"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:padding="10.0dip">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_his_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/today"
                android:textColor="@color/btn_text" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_his_loc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.0dip"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/address"
            android:textColor="@color/gray_font" />
    </LinearLayout>

</RelativeLayout>