<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/all_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_parent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dip"
        android:background="@drawable/context_bg"
        android:orientation="vertical"
        android:padding="15.0dip"
        android:visibility="gone">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textColor="@color/text_font"
            android:textSize="18.0sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/pingzhegnhao"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="@string/dialog_warrant_lable"
                android:textColor="@color/gray_font"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45.0dip"
                android:textColor="@color/red_font" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_datetime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:textColor="@color/light_gray_font" />

        <TextView
            android:id="@+id/tv_seat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:textColor="@color/light_gray_font" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/dialog_message"
            android:textColor="@color/light_red_font" />

        <Button
            android:id="@+id/btn_success_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:background="@drawable/green_btn_selector"
            android:gravity="center"
            android:text="@android:string/ok"
            android:textColor="@color/white"
            android:textSize="18.0sp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>