<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="15.0dip"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="5.0dip"
        android:background="@drawable/context_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:paddingTop="3.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="3.0dip"
                android:paddingTop="3.0dip">

                <TextView
                    android:layout_width="0.0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/set_Select"
                    android:textColor="@color/gray_font"
                    android:textSize="16.0sp" />

                <Button
                    android:id="@+id/select"
                    android:layout_width="0.0px"
                    android:layout_height="32.0dip"
                    android:layout_gravity="center|right"
                    android:layout_marginLeft="5.0dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/green_btn_selector"
                    android:text="@string/select_text"
                    android:textColor="@color/white"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip">

                <com.client.lrms.view.CustomSpinner
                    android:id="@+id/sp_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5.0dip"
                    android:layout_weight="1.0" />

                <com.client.lrms.view.CustomSpinner
                    android:id="@+id/sp_venues"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip">

                <com.client.lrms.view.CustomSpinner
                    android:id="@+id/sp_room"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5.0dip"
                    android:layout_weight="1.0" />

                <com.client.lrms.view.CustomSpinner
                    android:id="@+id/sp_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <com.client.lrms.view.CustomSpinner
                    android:id="@+id/sp_powers"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5.0dip"
                    android:layout_weight="1.0" />

                <com.client.lrms.view.CustomSpinner
                    android:id="@+id/sp_window"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_seats_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3.0dip"
            android:layout_marginTop="3.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:text="@string/seat_lable"
            android:textColor="@color/gray_font"
            android:textSize="16.0sp" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/default_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="30.0dip"
                android:text="@string/defult_message"
                android:textColor="@color/btn_text"
                android:textSize="16.0sp" />

            <FrameLayout
                android:id="@+id/rl_all_seat"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/goLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="3.0dip"
                    android:background="@drawable/go_left_normal" />

                <ImageView
                    android:id="@+id/goRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="3.0dip"
                    android:background="@drawable/go_right_pressed" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/seat_pager"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15.0dip"
                        android:layout_marginRight="15.0dip"
                        android:layout_weight="1.0" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="2.0dip">

                        <include layout="@layout/activity_seat_indicator" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="20.0dip"
                    android:layout_height="20.0dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/progress_text"
                    android:textColor="@color/btn_text"
                    android:textSize="12.0sp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>