<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/more_item_selector_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="不可用" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/more_item_selector_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="空闲" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/more_item_selector_blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="当前预约" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_TimeList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"/>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_timechange_seatsinfo"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:text="当前座位信息
信息学部十五舍565656"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/lable_bg"
                android:gravity="center_vertical"
                android:text="@string/StartTime"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_timema_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8:00"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/lable_bg"
                android:gravity="center_vertical"
                android:text="@string/EndTime"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_timema_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8:00"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_timema_switch"
                android:layout_width="123dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="55dp"
                android:background="@drawable/green_btn_selector"
                android:text="@string/SwitchTime"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>